# dayton-dynamic.github.com

./: .gitignore  CNAME  Gemfile  Phonegap_by_Tyler_Richey.ppt  README.md  _config.yml  _config_dev.yml  airmaps.json  check_airport_code_maps.ipynb  empty_rebuild.sh  index.html  index.md  pyfri-wbi.odp  receipts.md  receipts.txt  regular_expressions.ipynb  topics.md
_includes/: disqus.html  map.html  nav.html
_layouts/: default.html
_posts/: 2012-09-12-python-debugger.md  2012-10-10-clojure.md  2013-08-14-phonegap.md  2013-09-11-regular-expressions.md  2013-11-13-mongodb.md  2014-01-08-code-for-dayton.md  2014-05-14-code-review.md  2014-10-12-webscraping.md  2015-01-15-airport-maps.md  2015-06-10-polymer.md  2015-08-12-http-apis.md  2016-01-13-processing.md  2016-02-10-greasemonkey.md  2016-06-08-elm.md  2016-09-14-zen-of-your-language-here.md  2016-10-12-lisp-scheme.md  2016-11-09-elastic.md  2016-12-14-stocking-stuffers.md  2017-01-11-inheritance-and-composition.md  2017-01-11-tbd.md  2017-02-09-testing-and-editors.md  2017-03-08-interactive-visualizations.md  2017-04-12-dot-and-graphviz.md  2017-04-12-learning-with-exercism.md  2017-05-10-learning-with-exorcism.md  2017-05-10-tba.md  2017-06-14-learning-with-exercism.md  2017-07-12-perl6.md  2017-08-09-regex.md  2017-09-13-bad-programming.md  2017-10-11-pro-workflows.md  2017-11-08-easy-cruddy-webforms.md  2018-04-11-json-juggling.md  (+108 more)
meeting_notes/jupyter/: hello-quarto.ipynb  pyproject.toml  table-of-contents.ipynb
meeting_notes/jupyter/papermill/: singsong.ipynb
meeting_notes/jupyter/voila/: index.ipynb
(+131 files in other folders)
